# PaperTrade-India

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  app.py  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish.yml  test.yml
data/: ui_watchlist.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  COOKBOOK.md  FEES.md
examples/: 01_basic_usage.py  02_with_ai_agent.py  03_backtest_example.py  04_multi_account.py  05_mcp_server.py  06_tier3_observability.py  07_backtest_replay.py  08_data_providers.py  09_realism_features.py
scripts/: update_nse_holidays.py
src/papertrade_india/: __init__.py  _context.py  broker.py  cli.py  clock.py  corporate_actions.py  events.py  exceptions.py  fees.py  idempotency.py  interface.py  ledger.py  limit_orders.py  market_hours.py  microstructure.py  migrations.py  models.py  observability.py  partial_fills.py  persistence.py  preopen.py  presets.py  price_feed.py  quickstart.py  risk.py  settlement.py  simulation.py  slippage.py  symbols.py
src/papertrade_india/corporate_actions/: __init__.py  bonus.py  dividends.py  rights.py  splits.py  store.py
src/papertrade_india/data/: nse_holidays_2026.json  nse_holidays_2027.json  nse_universe_sample.csv
src/papertrade_india/domain/: __init__.py  exceptions.py  models.py
src/papertrade_india/domain/rules/: __init__.py  risk.py  tick_lot_band.py
src/papertrade_india/execution/: __init__.py  book.py  fees.py  settlement.py  slippage.py
src/papertrade_india/infrastructure/: __init__.py  holidays.py  idempotency.py  ledger.py  market_hours.py  migrations.py  persistence.py  symbols.py  watchlist.py
src/papertrade_india/orders/: __init__.py  amo.py  book_helpers.py  bracket.py  limit.py  market.py  preopen.py  state.py  stop.py  submit.py
src/papertrade_india/providers/: __init__.py  alphavantage.py  base.py  cache.py  composite.py  dhan.py  finnhub.py  health.py  jugaad.py  kite.py  nse_bhavcopy.py  nsepython.py  registry.py  stooq.py  twelvedata.py  upstox.py  upstox_instruments.py  yfinance.py
src/papertrade_india/reads/: __init__.py  account.py  orders.py  positions.py
src/papertrade_india/workers/: __init__.py  limit_orders.py
tests/: conftest.py
tests/e2e/: test_real_yfinance.py
tests/integration/: test_alpaca_contract.py  test_broker_invariants.py  test_cli_tier3.py  test_concurrent_access.py  test_corporate_actions.py  test_events_and_observability.py  test_full_lifecycle.py  test_idempotency.py  test_ledger.py  test_migrations.py  test_partial_fills_integration.py  test_quickstart_and_breakdown.py  test_real_depth_fill.py  test_realism_amo_gtt_preopen.py  test_realism_bonus_rights.py  test_realism_microstructure.py  test_realism_misc.py  test_realism_settlement.py  test_realism_stops_and_brackets.py  test_replay_clock.py  test_stale_price_reject.py  test_symbols.py
tests/unit/: test_book_real_depth.py  test_clock.py  test_fee_schedule.py  test_fees.py  test_fees_properties.py  test_holidays.py  test_layering.py  test_market_hours.py  test_microstructure.py  test_partial_fills.py  test_preopen.py  test_presets.py  test_price_feed.py  test_price_feed_new_provider_compat.py  test_providers_base.py  test_providers_broker_feed.py  test_providers_composite.py  test_providers_health.py  test_providers_registry.py  test_providers_rest.py  test_reads_positions.py  test_resilient_feed.py  test_risk.py  test_session_phase.py  test_settlement.py  test_simulation.py  test_slippage.py  test_upstox_instruments.py  test_watchlist_store.py
